[tool.poetry]
name = "sd-api-dev"
version = "0.1.0"
description = ""
authors = ["asano1313 <h.asano.kskd13@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.104.0"
uvicorn = "^0.23.2"
requests = "^2.31.0"
diffusers = "^0.21.4"
invisible-watermark = "^0.2.0"
transformers = "^4.34.1"
accelerate = "^0.24.0"
safetensors = "^0.4.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
